--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         >
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".auth.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -25,11 +25,11 @@
         </activity>
 
 
-<!--        <activity-->
-<!--            android:name=".main.MainActivityProfile"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme.NoActionBar">-->
-<!--        </activity>-->
+        <activity
+            android:name=".main.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
 
 
         <activity
