--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,35 +13,82 @@
         android:name=".main.MyApplication"
         >
 
+
+
+<!--        <activity-->
+<!--            android:name=".auth.LoginActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+
+
         <activity
-            android:name=".auth.LoginActivity"
+            android:name=".Activity.MainProfileActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+<!--        <activity-->
+<!--            android:name=".Activity.MainProfileActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme">-->
+<!--        </activity>-->
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".Activity.MainTeamActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
-
         <activity
-            android:name=".main.ActivityPlayerDetail"
+            android:name=".Activity.MainFieldActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
         </activity>
 
-        <receiver
-            android:name=".main.FireBaseSyncReceiver"
-            android:enabled="true"
-            android:exported="true" />
+        <activity
+            android:name=".Activity.HomeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+            android:name=".Activity.ListPlayerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+    </activity>
+
+        <activity
+            android:name=".Activity.InformationPlayerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+            android:name=".Activity.ListMatchActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+            android:name=".Activity.EditProfilePlayerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+<!--        <receiver-->
+<!--            android:name=".main.FireBaseSyncReceiver"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true" />-->
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
