--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,6 @@
         android:name=".main.MyApplication"
         >
 
-
-
-<!--        <activity-->
-<!--            android:name=".auth.LoginActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
-
-
         <activity
             android:name=".Activity.MainProfileActivity"
             android:label="@string/app_name"
@@ -36,6 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+<!--        <activity-->
+<!--            android:name=".Activity.MainProfileActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
 <!--        <activity-->
 <!--            android:name=".Activity.MainProfileActivity"-->
