--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         >
 
         <activity
-            android:name=".Activity.ActivityHome"
+            android:name=".main.ActivityHome"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -36,43 +36,50 @@
 <!--        </activity>-->
 
         <activity
-            android:name=".Activity.Player.ActivityMainPlayer"
+            android:name=".View.Player.Activity.ActivityMainPlayer"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
         <activity
-            android:name=".Activity.Team.ActivityMainTeam"
+            android:name=".View.Team.Activity.ActivityMainTeam"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
         <activity
-            android:name=".Activity.Field.ActivityMainField"
+            android:name=".View.Field.Activity.ActivityMainField"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
         <activity
-            android:name=".Activity.Player.ActivityListPlayer"
+            android:name=".View.Player.Activity.ActivityListPlayer"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
     </activity>
 
         <activity
-            android:name=".Activity.Player.ActivityInformationPlayer"
+            android:name=".View.Player.Activity.ActivityInformationPlayer"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
         <activity
-            android:name=".Activity.Field.ActivityListMatch"
+            android:name=".View.Field.Activity.ActivityListMatch"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
 
         <activity
-            android:name=".Activity.Player.ActivityEditProfilePlayer"
+            android:name=".View.Player.Activity.ActivityEditProfilePlayer"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+
+        <activity
+            android:name=".View.Team.Activity.ActivityEditProfileTeam"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
