--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_app_myclub"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -54,7 +54,7 @@
         </activity>
 
         <activity
-            android:name=".View.Player.Activity.ActivityListPlayer"
+            android:name=".View.Team.Activity.ActivityListTeam"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
     </activity>
@@ -67,6 +67,12 @@
 
         <activity
             android:name=".View.Field.Activity.ActivityListMatch"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+            android:name=".View.Field.Activity.ActivityListField"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
