--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,6 @@
 
 
         <activity
-            android:name=".view.Player.Activity.ActivityInformationPlayer"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-
-
-        <activity
             android:name=".view.Player.Activity.ActivityEditProfilePlayer"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
@@ -48,7 +41,7 @@
 
 
         <activity
-            android:name=".view.Team.Activity.ActivityEditProfileTeam"
+            android:name=".view.Team.Fragment.ActivityEditProfileTeam"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
