--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,13 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.18'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
+
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.gms:play-services-vision:17.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
 }
