--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myclub">
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
     <application
+        android:name=".main.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon_app_myclub"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".main.MyApplication"
-        >
+        android:theme="@style/AppTheme">
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
 
         <activity
-            android:name=".main.ActivityHome"
+            android:name=".googlemap.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -24,32 +35,59 @@
         </activity>
 
 
+        <activity
+            android:name=".main.ActivityHome"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
 
         <activity
-            android:name=".view.Player.Activity.ActivityMainPlayer"
+            android:name=".googlemap.activity.PlaceDetailsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-
-
+            android:theme="@style/AppTheme"></activity>
 
         <activity
-            android:name=".view.Player.Activity.ActivityEditProfilePlayer"
+            android:name=".googlemap.activity.PlaceOnMapActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-
+            android:theme="@style/AppTheme"></activity>
 
         <activity
-            android:name=".view.Team.Fragment.ActivityEditProfileTeam"
+            android:name=".googlemap.activity.ShowPlacesOnMapActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
 
-<!--        <receiver-->
-<!--            android:name=".main.FireBaseSyncReceiver"-->
-<!--            android:enabled="true"-->
-<!--            android:exported="true" />-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_map_api_key"/>
+
+<!--        <activity-->
+<!--            android:name=".testmap.MapsActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
+
+<!--        <activity-->
+<!--            android:name=".testmap.activity.PlaceDetailsActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
+
+<!--        <activity-->
+<!--            android:name=".testmap.activity.PlaceOnMapActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
+
+<!--        <activity-->
+<!--            android:name=".testmap.activity.ShowPlacesOnMapActivity"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
+
+<!--        <activity-->
+<!--            android:name=".main.ActivityHome"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
+
+        <!--        <receiver-->
+        <!--            android:name=".main.FireBaseSyncReceiver"-->
+        <!--            android:enabled="true"-->
+        <!--            android:exported="true" />-->
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
