--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.18'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
 
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-nearby:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
@@ -65,5 +67,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+
+    //others
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
+    implementation "com.airbnb.android:lottie:3.0.7"
+    implementation 'com.tuyenmonkey:mkloader:1.4.0'
+    implementation 'com.myhexaville:smart-image-picker:1.0.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.hbb20:ccp:2.3.2'
+
 
 }
