--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.location.gps" />
     <application
@@ -25,7 +28,7 @@
 
 
         <activity
-            android:name=".googlemap.activity.MainActivity"
+            android:name=".auth.ActivityLogin"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -34,11 +37,38 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".auth.PhoneLoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".auth.VerificationActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+
+
+        <activity
+            android:name=".auth.EmailRegistrationActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+
+
 
         <activity
             android:name=".main.ActivityHome"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
+
+
+                <activity
+                    android:name=".googlemap.activity.MainActivity"
+                    android:label="@string/app_name"
+                    android:theme="@style/AppTheme"></activity>
+
+ 
 
         <activity
             android:name=".googlemap.activity.PlaceDetailsActivity"
@@ -59,30 +89,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map_api_key"/>
 
-<!--        <activity-->
-<!--            android:name=".testmap.MapsActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme"></activity>-->
 
-<!--        <activity-->
-<!--            android:name=".testmap.activity.PlaceDetailsActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme"></activity>-->
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
 
-<!--        <activity-->
-<!--            android:name=".testmap.activity.PlaceOnMapActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme"></activity>-->
 
-<!--        <activity-->
-<!--            android:name=".testmap.activity.ShowPlacesOnMapActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme"></activity>-->
-
-<!--        <activity-->
-<!--            android:name=".main.ActivityHome"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/AppTheme"></activity>-->
 
         <!--        <receiver-->
         <!--            android:name=".main.FireBaseSyncReceiver"-->
