--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
 
         <activity
-            android:name=".auth.ActivityLogin"
+            android:name=".main.ActivityHome"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -57,10 +57,10 @@
 
 
 
-        <activity
-            android:name=".main.ActivityHome"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme"></activity>
+<!--        <activity-->
+<!--            android:name=".main.ActivityHome"-->
+<!--            android:label="@string/app_name"-->
+<!--            android:theme="@style/AppTheme"></activity>-->
 
 
                 <activity
