--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <application
         android:name=".main.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/icon_app"
+        android:icon="@drawable/ic_baseline_sports_soccer_24"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
